[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-test"
version = "1.0.0"
description = "FastAPI agent demo service with JSON logs and OpenTelemetry traces."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "opentelemetry-exporter-otlp-proto-http>=1.36.0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-instrumentation-httpx>=0.57b0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
